--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,42 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+  --custom-gradient: linear-gradient(106.98deg, #E0B851 21.19%, #C99950 81.98%);
+  --black: #3a3a3a;
+  --yellow: #C99950;
+}
 
 * {
   padding: 0;
   margin: 0;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
 }
-
+a{
+  text-decoration: none;
+}
+body{
+  background-size: cover;
+  background-position: center;
+  padding-top: 70px;
+}
+/* Default styles for larger screens */
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   align-items: center;
-  margin: 10px;
   justify-content: space-between;
-  align-items: center;
   padding: 10px 10%;
+  background-color: #fff; /* Adjust the background color as needed */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.logo_container{
+  color: var(--yellow);
 }
 
 .nav_container {
@@ -20,54 +44,261 @@ header {
   margin-right: 0;
 }
 
-.nav_item {
-  text-decoration: none;
-  padding: 10px;
-  color: #333;
-  cursor: pointer;
-}
-
 .nav_list {
   list-style: none;
   display: flex;
 }
 
-.nav_item.active {
-  font-weight: bold;
+.nav_item {
+  position: relative;
+  text-decoration: none;
+  padding: 0px;
+  color: #a5a5a5;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 18px;
+  margin-left: 40px;
+}
+
+.nav_item::before {
+  content: '';
+  position: absolute;
+  top: 95%;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  background: var(--custom-gradient);
+  height: 2px;
+  transition: .3s;
+}
+
+.nav_item:hover::before {
+  width: 100%;
+  background-color: var(--custom-gradient);
+}
+
+.nav_item:hover {
+  color: #C99950;
 }
 
 .nav_item_btn {
-  border-left: #333 solid 1.3px;
   padding-left: 20px;
   padding: 9px 25px;
-  background: linear-gradient(106.98deg, #E0B851 21.19%, #C99950 81.98%);
-  border: none;
+  background: var(--custom-gradient);
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
   color: white;
   font-weight: 600;
-  box-shadow: 0px 3px 5px 0px #3a3a3a80;
+  box-shadow: 0px 3px 15px 0px #75757580;
   text-decoration: none;
 }
 
-
-
 .nav_item_btn:hover {
   transform: translateY(-2px);
-  box-shadow: 5px 15px 50px 0px #3a3a3a80;
+  box-shadow: 0px 3px 5px 0px #3a3a3a80;
 }
 
 .nav_item.last {
-  margin-right: 10px;
-  padding-right: 10px;
+  margin-right: 40px;
 }
+
 
 .form_container {
-  background-color: #e5e5e5;
-  height: 500px;
+  background-color: #fff;
+
 }
 
+
+/* Contact Us */
+
+.title {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.title h1 {
+  font-size: 36px;
+  color: var(--yellow);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
+}
+
+/* Contact Us forms */
+.sub_text{
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.form_message{
+  text-align: center;
+  max-width: 600px;
+  margin: 10px auto;
+}
+
+.sub_text ul{
+  display: flex;
+  border-bottom: #C99950 1px solid;
+  border-top: #C99950 1px solid;
+}
+.sub_text li{
+  list-style: none;
+  margin: 5px;
+  a{
+    color: #3a3a3a;
+  }
+}
+.sub_text i{
+  color: var(--yellow);
+}
+
+
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 800px; /* Adjust the max-width as needed */
+  margin: 0 auto; /* Center the form horizontally */
+}
+
+.inputs {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.left_side,
+.right_side {
+  flex: 1; /* Equal width for both sides */
+  height: 190px;
+}
+
+.left_side input,
+.right_side textarea {
+  width: 100%; /* Make input fields and textarea fill the available width */
+  padding: 10px;
+  border-radius: 10px;
+}
+textarea{
+  height: 75%;
+}
+button {
+  width: 100%; /* Button takes full width */
+  padding: 10px;
+  background: var(--custom-gradient); /* Button color */
+  color: white; /* Text color */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #45a049; /* Button color on hover */
+}
+
+
+
+/* Contact Us - Facades*/
+
+.facades{
+  display: flex;
+  margin: 30px;
+  gap: 30px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.facade_container {
+  flex: 0 0 calc(48% - 20px); /* Two containers per row with some spacing */
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.img_container {
+  position: relative;
+  overflow: hidden;
+}
+
+.img_container img {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+
+.facade_container p {
+  margin: 10px;
+  text-align: center;
+  font-size: 14px;
+  color: #555;
+}
+
+.facades {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+
+.img_container::before {
+  content: '';
+  display: block;
+  padding-top: 75%; /* Set the aspect ratio (height/width) for the container */
+}
+
+.img_container img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* .map_container {
+  width: 100%;
+  max-width: 1150px;
+  margin: 30px auto;
+  
+}
+
+.map {
+  width: 100%;
+  height: 400px;
+  border: 1px solid #ddd; 
+  border-radius: 8px; 
+  overflow: hidden;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+} */
+.map_container {
+  width: 100%;
+  margin: 30px auto;
+  
+}
+@media screen and (max-width: 768px) {
+  
+  .facades {
+    display: flex;
+    flex-direction: column; /* Stack containers vertically */
+    align-items: center; /* Center the containers horizontally */
+  }
+  .facade_container {
+    flex: 0 0 90%; /* Full width for one container per row on smaller screens */
+    
+  }
+  
+}
+
+
+footer{
+  background-color: #3a3a3a;
+  height: 200px;
+}
+/* 
 .logo {
   width: 7%;
-}
+} */
